Changes between 3.0.8 and 3.0.9:
----------------------------------

Core:
 * Work around busy looping when playing an invalid item through VLM 

Demux:
 * Fix TTML entities not passed to decoder
 * Misc raw H264/HEVC frame rate fixes
 * Fixed adaptive regression on TS format change (mostly HLS)

Packetizers:
 * Fixes H264/HEVC incomplete draining in some cases
 * packetizer_helper: Fix potential trailing junk on last packet
 * Improved check to prevent fLAC synchronization drops

Decoder:
 * avcodec: revector video decoder to fix incomplete drain

macOS:
 * Fix Apple Remote support on macOS Catalina

Misc:
 * Add missing .wpl & .zpl file associations on Windows

Changes between 3.0.7.1 and 3.0.8:
----------------------------------

Core:
 * Fix stuttering for low framerate videos

Demux:
 * Fix channel ordering in some MP4 files
 * Fix glitches in TS over HLS
 * Add real probing of HLS streams
 * Fix HLS MIME type fallback

Decoder:
 * Fix WebVTT subtitles rendering

Stream filter:
 * Improve network buffering

Misc:
 * Update Youtube script

Audio Output:
 * macOS/iOS: Fix stuttering or blank audio when starting or seeking when using
   external audio devices (bluetooth for example)
 * macOS: Fix AV synchronization when using external audio devices

Video Output:
 * Direct3D11: Fix hardware acceleration for some AMD drivers

Stream output:
 * Fix transcoding when the decoder does not set the chroma

Security:
 * Fix a buffer overflow in the MKV demuxer (CVE-2019-14970)
 * Fix a read buffer overflow in the avcodec decoder (CVE-2019-13962)
 * Fix a read buffer overflow in the FAAD decoder
 * Fix a read buffer overflow in the OGG demuxer (CVE-2019-14437, CVE-2019-14438)
 * Fix a read buffer overflow in the ASF demuxer (CVE-2019-14776)
 * Fix a use after free in the MKV demuxer (CVE-2019-14777, CVE-2019-14778)
 * Fix a use after free in the ASF demuxer (CVE-2019-14533)
 * Fix a couple of integer underflows in the MP4 demuxer (CVE-2019-13602)