@@ -177,6 +177,7 @@ static CGEventRef tapEventCallback(CGEventTapProxy proxy, CGEventType type, CGEv
             [[NSBundle mainBundle] bundleIdentifier], // your app
             @"com.spotify.client",
             @"com.apple.iTunes",
+            @"com.apple.Music",
             @"com.apple.QuickTimePlayerX",
             @"com.apple.quicktimeplayer",
             @"com.apple.iWork.Keynote",
